2016-10-20 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl: (POD): Fix typos.

	* doc/index.html: Remove call to
	http://tiny-tools.sourceforge.net/bmt-time.js

2015-10-19  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl: (Help): emove eval and use plain
	"use Pod::Man" at the beginning.

2014-03-05 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl (Help::POD::FORMAT DESCRIPTION): Fix typo.
	(HandleCommandLineArgs): Remove defined() test from array.
	(Help::POD): Add UTF-8 encoding tag.

2012-01-11 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl (XlatPicture): Improve regexp.
	(XlatUrlInline): Support multiple #URL tags on line.

2010-12-17 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl (XlatUrl): Fix https support.

2010-12-16 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl (XlatRef): Support https.
	(AcceptUrl): Ignore example.net, example.org
	(XlatUrl): Support https.

2010-12-09 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl (Main): Read $TITLE variable set in command line.

2010-12-05 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl (HandleCommandLineArgs): Correct
	--Link-check-single top --link-check-single.

2010-05-01 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl (HandleCommandLineArgs): Remove
	"require_order" from Getopt::Long::config().

2010-04-15 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl (Help): rewrite eval Pod::Man call.

2010-04-13 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/t2html.pl: Add 'use 5.10' because "Named Capture Buffers"
	are used.

2010-03-24 Wed  Jari Aalto  <jari.aalto@cante.net>

	* README (at the end): Add Copyright and License.

2010-03-13 Sat  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl:  (top level): rearrange globals and "use"
        commands.
        (Version*): new.

2010-03-12 Sat  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl:
	(top level): English qw( -no_match_vars )
