@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man 2.28 (Pod::Simple 3.32)
+.\" Automatically generated by Pod::Man 4.09 (Pod::Simple 3.35)
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -46,7 +46,7 @@
 .ie \n(.g .ds Aq \(aq
 .el       .ds Aq '
 .\"
-.\" If the F register is turned on, we'll generate index entries on stderr for
+.\" If the F register is >0, we'll generate index entries on stderr for
 .\" titles (.TH), headers (.SH), subsections (.SS), items (.Ip), and index
 .\" entries marked with X<> in POD.  Of course, you'll have to process the
 .\" output yourself in some meaningful fashion.
@@ -54,20 +54,16 @@
 .\" Avoid warning from groff about undefined register 'F'.
 .de IX
 ..
-.nr rF 0
-.if \n(.g .if rF .nr rF 1
-.if (\n(rF:(\n(.g==0)) \{
-.    if \nF \{
-.        de IX
-.        tm Index:\\$1\t\\n%\t"\\$2"
+.if !\nF .nr F 0
+.if \nF>0 \{\
+.    de IX
+.    tm Index:\\$1\t\\n%\t"\\$2"
 ..
-.        if !\nF==2 \{
-.            nr % 0
-.            nr F 2
-.        \}
+.    if !\nF==2 \{\
+.        nr % 0
+.        nr F 2
 .    \}
 .\}
-.rr rF
 .\"
 .\" Accent mark definitions (@(#)ms.acc 1.5 88/02/08 SMI; from UCB 4.2).
 .\" Fear.  Run.  Save yourself.  No user-serviceable parts.
@@ -133,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "T2HTML 1"
-.TH T2HTML 1 "2016-10-20" "perl v5.22.2" "Perl Text to HTML Converter"
+.TH T2HTML 1 "2019-05-05" "perl v5.26.3" "Perl Text to HTML Converter"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -159,7 +155,7 @@ pages. An example of conversion:
 \&  http://pm\-doc.sourceforge.net/pm\-tips.css
 \&
 \&  3. An Emacs mode tinytf.el for writing the text files (optional)
-\&  https://savannah.nongnu.org/projects/emacs\-tiny\-tools
+\&  https://github.com/jaalto/project\-\-emacs\-tiny\-tools
 .Ve
 .PP
 \&\fBRequirements for the input ascii files\fR
@@ -218,7 +214,7 @@ To help maintining large documents, there is also available an
 \&\fIEmacs\fR minor mode, package called \fItinytf.el\fR, which offers text
 fontification with colors, Indentation control, bullet filling,
 heading renumbering, word markup, syntax highlighting etc.
-See project http://freecode.com/projects/emacs\-tiny\-tools
+See https://github.com/jaalto/project\*(--emacs\-tiny\-tools
 .SH "OPTIONS"
 .IX Header "OPTIONS"
 .SS "Html: Header and Footer options"
@@ -368,8 +364,8 @@ This option affects how the code section (column 12) is rendered. Normally
 the section is surrounded with a <pre>..</pre> codes, but with this
 options, something more fancier is used. The code is wrapped inside a
 <table>...</table> and the background color is set to a shade of gray.
-.ie n .IP "\fB\-\-css\-code\-note ""\s-1REGEXP"" \s0\fR" 4
-.el .IP "\fB\-\-css\-code\-note ``\s-1REGEXP'' \s0\fR" 4
+.ie n .IP "\fB\-\-css\-code\-note ""\s-1REGEXP""\s0 \fR" 4
+.el .IP "\fB\-\-css\-code\-note ``\s-1REGEXP''\s0 \fR" 4
 .IX Item "--css-code-note REGEXP "
 Option \fB\-\-css\-code\-bg\fR is required to activate this option. A special word
 defined using regexp (default is 'Note:') will mark code sections specially.
@@ -744,10 +740,10 @@ used by search engines. Refer to \s-1HTML 4.01\s0 specification and topic
 \&\*(L"7.4.4 Meta data\*(R"
 .IP "\fB\-\-name\-uniq\fR" 4
 .IX Item "--name-uniq"
-First 1\-4 words from the heading are used for the \s-1HTML \s0\fIname\fR tags.
+First 1\-4 words from the heading are used for the \s-1HTML\s0 \fIname\fR tags.
 However, it is possible that two same headings start with exactly the same
 1\-4 words. In those cases you have to turn on this option. It will use
-counter 00 \- 999 instead of words from headings to construct \s-1HTML \s0\fIname\fR
+counter 00 \- 999 instead of words from headings to construct \s-1HTML\s0 \fIname\fR
 references.
 .Sp
 Please use this option only in emergencies, because referring to jump block
@@ -1655,10 +1651,10 @@ iMATIX created htmlpp which is available from http://www.imatix.com and seen
 .PP
 Emacs minor mode to help writing documents based on \s-1TF\s0 layout is
 available. See package tinytf.el in project
-http://freecode.com/projects/emacs\-tiny\-tools
+https://github.com/jaalto/project\*(--emacs\-tiny\-tools
 .SS "Standards"
 .IX Subsection "Standards"
-\&\s-1RFC \s0\fB1766\fR contains list of language codes at
+\&\s-1RFC\s0 \fB1766\fR contains list of language codes at
 http://www.rfc.net/
 .PP
 Latest \s-1HTML/XHTML\s0 and \s-1CSS\s0 specifications are at http://www.w3c.org/
@@ -1688,14 +1684,14 @@ No additional Perl \s-1CPAN\s0 modules needed for text to \s-1HTML\s0 conversion
 .SH "COREQUISITES"
 .IX Header "COREQUISITES"
 If link check feature is used to to validate \s-1URL\s0 links, then following
-modules are needed from Perl \s-1CPAN \s0\f(CW\*(C`use LWP::UserAgent\*(C'\fR \f(CW\*(C`HTML::FormatText\*(C'\fR
+modules are needed from Perl \s-1CPAN\s0 \f(CW\*(C`use LWP::UserAgent\*(C'\fR \f(CW\*(C`HTML::FormatText\*(C'\fR
 and \f(CW\*(C`HTML::Parse\*(C'\fR
 .PP
 If you module \f(CW\*(C`HTML::LinkExtractor\*(C'\fR is available, it is used
 instead of included link extracting algorithm.
 .SH "AVAILABILITY"
 .IX Header "AVAILABILITY"
-Homepage is at http://freecode.com/projects/perl\-text2html
+Homepage is at https://github.com/jaalto/project\*(--perl\-text2html
 .SH "AUTHOR"
 .IX Header "AUTHOR"
 Copyright (C) 1996\-2016 <jari.aalto@cante.net>
