@@ -17,12 +17,12 @@ Conversion for text files
 -->
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Expires" content="Sat,  1 May 2010 10:09:08 GMT">
+  <meta http-equiv="Expires" content="Thu,  4 Jul 2019 15:54:57 GMT">
 
 
 
   <meta name="Generator"
-	content="2010-03-02 12:09 Perl program t2html v2010.0302.0944 http://freecode.com/projects/perl-text2html">
+	content="2019-05-05 18:54 Perl program t2html v2019.0505.1548 https://github.com/jaalto/project--perl-text2html">
 
 
 
@@ -143,7 +143,7 @@ Conversion for text files
 
 
 <p class="column8">
-        Copyright &copy; 1996-2010 Jari Aalto
+        Copyright &copy; 1996-2016 Jari Aalto
 
 
 <p class="column8">
@@ -328,7 +328,7 @@ Conversion for text files
         number is displayed or editor can be configured to advance your
         TAB by 4 spaces. That's it.
         An Emacs minor mode (See package
-        <a href="http://freecode.com/projects/emacs-tiny-tools">tinytf.el</a>) can
+        <a href="https://github.com/jaalto/project--emacs-tiny-tools">tinytf.el</a>) can
         make the writing documents easy. The mode will help formatting
         paragraphs, filling bullets numbering headings and keeping TOC
         up to date.
@@ -584,10 +584,11 @@ Conversion for text files
 	</li>
 <li> <a href="http://wwwwbs.cs.tu-berlin.de/~schwartz/pmh/">Laola</a>
              Viewing MS WORD files.
-             &quot;Laola(perl) does a respectable job of taking MSWord files to text
-             ...LAOLA is giving access to the raw document streams of any program
-             using &quot;structured storage&quot; technology to save its documents.
-             ELSER is dealing especially with these streams as they are present
+             &quot;Laola(perl) does a respectable job of taking MSWord
+             files to text ...LAOLA is giving access to the raw
+             document streams of any program using &quot;structured
+             storage&quot; technology to save its documents. ELSER is
+             dealing especially with these streams as they are present
 	             in Word 6 and Word 7 documents.&quot;</li>
 </ul>
 
@@ -625,7 +626,7 @@ Conversion for text files
 -->
 <hr>
 
-<em    class="footer">Html date: 2010-03-02 12:09<br>
+<em    class="footer">Html date: 2019-05-05 18:54<br>
 
 </em>
 
