@@ -126,7 +126,7 @@ development page instructions how get latest source code.
 <UL>
 
     <LI>
-        <A HREF="http://freecode.com/projects/perlwebget"
+        <A HREF="https://github.com/jaalto/project--perl-webget"
         CLASS="main">
         Main project page
         </A>
@@ -134,15 +134,9 @@ development page instructions how get latest source code.
 
         <a name="devel" id="devel"></a>
     <LI>
-        <A HREF="https://savannah.nongnu.org/projects/perl-webget"
+        <A HREF="https://github.com/jaalto/project--perl-webget"
         CLASS="main">Development page</A>
         (Source code, bug tracker etc.)
-
-    <LI>
-        <A HREF="https://savannah.nongnu.org/files/?group=perl-webget"
-        class="main">
-        Downloads
-        </A>
 
     <LI>
         <A HREF="manual/"
@@ -158,7 +152,8 @@ development page instructions how get latest source code.
 	(how it all works)
 
     <LI>
-        <A HREF="http://git.savannah.gnu.org/gitweb/?p=perl-text2html.git;a=blob;f=bin/ChangeLog;hb=master" class="main">
+        <A HREF="https://github.com/jaalto/project--perl-webget/blob/master/ChangeLog"
+	   class="main">
         ChangeLog
         </A>
         Generated by editing the code in Emacs and pressing
