@@ -84,7 +84,7 @@
   http://pm-doc.sourceforge.net/pm-tips.css
 
   3. An Emacs mode tinytf.el for writing the text files (optional)
-  https://savannah.nongnu.org/projects/emacs-tiny-tools</code></pre>
+  https://github.com/jaalto/project--emacs-tiny-tools</code></pre>
 
 <p><b>Requirements for the input ascii files</b></p>
 
@@ -113,7 +113,7 @@
 
 <p>Text files are also the only sensible format if documents are kept under version control like RCS, CVS, SVN, Arch, Perforce, ClearCase. They can be asily compared with diff and patches can be easily received and sent to them.</p>
 
-<p>To help maintining large documents, there is also available an <i>Emacs</i> minor mode, package called <i>tinytf.el</i>, which offers text fontification with colors, Indentation control, bullet filling, heading renumbering, word markup, syntax highlighting etc. See project http://freecode.com/projects/emacs-tiny-tools</p>
+<p>To help maintining large documents, there is also available an <i>Emacs</i> minor mode, package called <i>tinytf.el</i>, which offers text fontification with colors, Indentation control, bullet filling, heading renumbering, word markup, syntax highlighting etc. See https://github.com/jaalto/project--emacs-tiny-tools</p>
 
 <h1 id="OPTIONS">OPTIONS</h1>
 
@@ -1444,7 +1444,7 @@
 
 <p>iMATIX created htmlpp which is available from http://www.imatix.com and seen 2014-03-05 at http://legacy.imatix.com/html/htmlpp</p>
 
-<p>Emacs minor mode to help writing documents based on TF layout is available. See package tinytf.el in project http://freecode.com/projects/emacs-tiny-tools</p>
+<p>Emacs minor mode to help writing documents based on TF layout is available. See package tinytf.el in project https://github.com/jaalto/project--emacs-tiny-tools</p>
 
 <h2 id="Standards">Standards</h2>
 
@@ -1480,7 +1480,7 @@
 
 <h1 id="AVAILABILITY">AVAILABILITY</h1>
 
-<p>Homepage is at http://freecode.com/projects/perl-text2html</p>
+<p>Homepage is at https://github.com/jaalto/project--perl-text2html</p>
 
 <h1 id="AUTHOR">AUTHOR</h1>
 
