@@ -17,7 +17,7 @@ DESCRIPTION
       http://pm-doc.sourceforge.net/pm-tips.css
 
       3. An Emacs mode tinytf.el for writing the text files (optional)
-      https://savannah.nongnu.org/projects/emacs-tiny-tools
+      https://github.com/jaalto/project--emacs-tiny-tools
 
     Requirements for the input ascii files
 
@@ -72,8 +72,8 @@ DESCRIPTION
     To help maintining large documents, there is also available an *Emacs*
     minor mode, package called *tinytf.el*, which offers text fontification
     with colors, Indentation control, bullet filling, heading renumbering,
-    word markup, syntax highlighting etc. See project
-    http://freecode.com/projects/emacs-tiny-tools
+    word markup, syntax highlighting etc. See
+    https://github.com/jaalto/project--emacs-tiny-tools
 
 OPTIONS
   Html: Header and Footer options
@@ -1352,7 +1352,7 @@ SEE ALSO
 
     Emacs minor mode to help writing documents based on TF layout is
     available. See package tinytf.el in project
-    http://freecode.com/projects/emacs-tiny-tools
+    https://github.com/jaalto/project--emacs-tiny-tools
 
   Standards
     RFC 1766 contains list of language codes at http://www.rfc.net/
@@ -1389,7 +1389,7 @@ COREQUISITES
     included link extracting algorithm.
 
 AVAILABILITY
-    Homepage is at http://freecode.com/projects/perl-text2html
+    Homepage is at https://github.com/jaalto/project--perl-text2html
 
 AUTHOR
     Copyright (C) 1996-2016 <jari.aalto@cante.net>
