@@ -1,3 +1,7 @@
+2019-05-05 Sun  Jari Aalto  <jari.aalto@cante.net>
+
+	* Makefile (html): Add doc/conversion/index.html
+
 2016-10-20 Thu  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/t2html.pl: (POD): Fix typos.
